[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
incremental = true

[dependencies]
axum = { version = "0.6.9", features = ["ws"] }
axum-macros = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }
sysinfo = "0.28.1"
tokio = { version = "1.26.0", features = ["full"] }
